--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,38 @@
-.ant-layout{
-    min-height: 200vh;
+@import '~antd/dist/antd.css';
+
+.ant-layout {
+    min-height: 100vh;
 }
 
-.ant-layout-sider{
-    background-image: linear-gradient(180deg,bluergb(29, 172, 255)e);
-    background-attachment: fixed;
+.ant-layout-sider {
+    background-image: linear-gradient(#1e2422, #000000);
+    background-attachment:fixed;
+    width: 800px;
+    padding: 30px;
 }
 
-.ant-layout-footer{
-    background-color: black;
-    padding-bottom: 2px;
-    padding-top: 5px;
+.ant-layout-content {
+    background-image: linear-gradient(#494B4A, #030404);
+    background-attachment:fixed;
 }
 
-.ant-tabs-top > .ant-tabs-nav::before{
+.ant-layout-footer {
+    background-color: #292929;
+    padding-bottom: 4px;
+    padding-top: 15px;
+}
+
+.ant-tabs-top > .ant-tabs-nav::before {
     border-bottom: 0px;
 }
 
-.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
     color: white;
-    text-shadow: 0.25px currentColor;
+    text-shadow: 0 0 0.25px currentcolor;
 }
 
-.ant-tabs-tab-btn:focus{
-    color: aliceblue;
+.ant-tabs-tab-btn:focus {
+    color: white;
 }
 
 .ant-tabs-tab {
@@ -37,17 +46,16 @@
 }
 
 .ant-tabs-ink-bar {
-    background: #340da9;
+    background: #1DB954;
     width: 10px;
 }
 
 .ant-slider-track {
-    background: #340da9;
-    background-color: ;
+    background-color: #1DB954;
 }
 
 .ant-slider:hover .ant-slider-track {
-    background-color:#495ec3;
+    background-color: #1DB954;
 }
 
 .ant-slider-handle {
